Fixing overflow issue

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ body {
 
 /*** 3. TESTIMONIALS CAROUSEL ***/
 
+.testimonials-section {
+    background-color: #C271FF;
+}
+
 #testimonials {
     background-color: #C271FF;
 }
